build(Dockerfile): add syntax declaration

--- a/docker/openemr/7.0.4/Dockerfile
+++ b/docker/openemr/7.0.4/Dockerfile
@@ -1,3 +1,4 @@
+# syntax=docker/dockerfile:1
 
 # Below allows easy centralized setting of alpine version
 #  (note NOT meant to use this has an actually argument in building docker like the flex series does)
