--- a/docker/mysql-xtrabackup/Dockerfile
+++ b/docker/mysql-xtrabackup/Dockerfile
@@ -1,3 +1,5 @@
+# syntax=docker/dockerfile:1
+
 FROM debian:jessie
 
 # add our user and group first to make sure their IDs get assigned consistently, regardless of whatever dependencies get added
