--- a/.github/workflows/build-704.yml
+++ b/.github/workflows/build-704.yml
@@ -2,8 +2,8 @@ name: Development 7.0.4 Docker Nightly Build
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 2 * * *' # run at 2 AM UTC
+  # schedule:
+  #  - cron: '0 2 * * *' # run at 2 AM UTC
 
 jobs:
   build:
