--- a/.github/workflows/build-704.yml
+++ b/.github/workflows/build-704.yml
@@ -5,7 +5,7 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: seu-usuario/openemr-custom
+  IMAGE_NAME: lucirlei/openemr-custom
   OPENEMR_VERSION: '7.0.2'
 
 jobs:
