--- a/.github/workflows/build-704.yml
+++ b/.github/workflows/build-704.yml
@@ -6,7 +6,7 @@ on:
 env:
   REGISTRY: docker.io
   IMAGE_NAME: lucirleisantos/openemr-custom
-  OPENEMR_VERSION: '7.0.2'
+  OPENEMR_VERSION: '7.0.3'
 
 jobs:
   build-and-push:
@@ -25,14 +25,11 @@ jobs:
           repository: lucirlei/openemr
           path: src-openemr
 
-      # ================================================================= #
-      # ===== CORREÇÃO APLICADA AQUI ===== #
       - name: Log in to Docker Hub
-        uses: docker/login-action@v3 # Corrigido de 'actions/login-action' para 'docker/login-action'
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      # ================================================================= #
 
       - name: Extract Docker metadata
         id: meta
@@ -61,5 +58,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type:gha
-          cache-to: type:gha,mode=max
+          # ================================================================= #
+          # ===== CORREÇÃO DO CACHE APLICADA AQUI ===== #
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache
+          cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
+          # ================================================================= #
