--- a/.github/workflows/build-704.yml
+++ b/.github/workflows/build-704.yml
@@ -1,65 +1,30 @@
-name: Build and Publish My Custom OpenEMR Image (with Debug)
+name: Development 7.0.4 Docker Nightly Build
 
 on:
   workflow_dispatch:
-
-env:
-  REGISTRY: docker.io
-  IMAGE_NAME: lucirleisantos/openemr-custom
-  OPENEMR_VERSION: '7.0.3'
+  schedule:
+    - cron: '0 2 * * *' # run at 2 AM UTC
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
+  build:
+    # Only run from master branch on the main repository
+    if: github.repository_owner == 'lucirlei' && github.repository == 'lucirlei/openemr-devops' && github.ref == 'refs/heads/master'
+    runs-on: ubuntu-22.04
     steps:
-      - name: Checkout DevOps Repository
-        uses: actions/checkout@v4
-
-      - name: Checkout OpenEMR Source from My Fork
-        uses: actions/checkout@v4
-        with:
-          repository: lucirlei/openemr
-          path: src-openemr
-
-      - name: Log in to Docker Hub
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            latest
-            ${{ env.OPENEMR_VERSION }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: DEBUG - List files in workspace
-        run: |
-          echo "================================================="
-          echo "Conteúdo do diretório de trabalho atual:"
-          ls -laR
-          echo "================================================="
-
-      - name: Build and push Docker image
+      - name: Build and push 7.0.4 docker
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ./docker/openemr/${{ env.OPENEMR_VERSION }}/Dockerfile
+          context: "{{defaultContext}}:docker/openemr/7.0.4"
+          tags: lucirleisantos/openemr:7.0.4, lucirleisantos/openemr:dev, lucirleisantos/openemr:next
+          platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          # ================================================================= #
-          # ===== CORREÇÃO DO CACHE APLICADA AQUI ===== #
-          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache
-          cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
-          # ================================================================= #
+          no-cache: true
